--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "startbootstrap-sb-admin-2": "^3.3.7",
     "zerorpc": "latest"
   },
   "devDependencies": {
