--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "rotkelchen",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
-    "startbootstrap-sb-admin-2": "^3.3.7",
-    "zerorpc": "latest",
-    "tail": "latest"
-  },
-  "devDependencies": {
-    "electron": "1.6.10",
-    "electron-packager": "^8.5.1",
-    "electron-rebuild": "^1.5.7"
-  }
+    "name": "rotkelchen",
+    "main": "main.js",
+    "scripts": {
+	"start": "electron ."
+    },
+    "dependencies": {
+	"bootstrap": "^3.3.7",
+	"datatables.net": "^1.10.16",
+	"datatables.net-dt": "^1.10.16",
+	"jquery": "^3.2.1",
+	"startbootstrap-sb-admin-2": "^3.3.7",
+	"tail": "latest",
+	"datatables.net": "latest",
+	"datatables.net-dt": "latest",
+	"zerorpc": "latest"
+    },
+    "devDependencies": {
+	"electron": "1.6.10",
+	"electron-packager": "^8.5.1",
+	"electron-rebuild": "^1.5.7"
+    }
 }
