--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+gevents
 zerorpc
-# web3 <= 3.16.1
 web3
 pysqlcipher3
 requests
+pycrypto
 
 # dev requirements -- could go onto a separate file
 pytest
