Add OSX travis tests
Modify travis.yml to also have OSX tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,53 @@
-dist: trusty
-sudo: true
-language: generic
+#Inspiration for OSX from: https://github.com/bjones1/CodeChat/blob/master/.travis.yml
+os: linux
+language: python
+python:
+  - 3.6
 
 
-jobs:
+matrix:
   include:
-    - language: python
-      python: '3.6'
-      env:
-        - TEST_TYPE=rotkehlchen
+  - os: osx
+    language: generic
+    env: INSTALL_TYPE=macpython VERSION=3.6 VENV=venv
+  - os: linux
+    language: python
+    python: '3.6'
 
-      cache:
-        pip: true
-        directories:
-          - $HOME/.cache/pip
+cache:
+  pip: true
+  directories:
+    - $HOME/.cache/pip
 
-      before_install:
-            - sudo apt-get install -y libsqlcipher-dev libzmq-dev
-            - mkdir -p $HOME/.bin
-            - export PATH=$PATH:$HOME/.bin
+# _`before_install`: Perform the manual steps on OS X to install python3 and
+# activate venv, since Python support is not available, per the list of
+# `unsupported languages on OS X <https://github.com/travis-ci/travis-ci/issues/2320>`_.
+# The following approach is based on a `workaround <https://github.com/travis-ci/travis-ci/issues/2312#issuecomment-195620855>`_.
+# This was modified based on `instructions to install multiple Python versions on OS X <https://gist.github.com/Bouke/11261620>`_.
+# See also the `pyenv docs <https://github.com/yyuu/pyenv/blob/master/README.md>`_.
+before_install: |
+  mkdir -p $HOME/.bin
+  export PATH=$PATH:$HOME/.bin
+  if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update && brew install sqlcipher
+    git clone https://github.com/MacPython/terryfy.git
+    # Avoid printing the lines from the script below.
+    source terryfy/travis_tools.sh
+    get_python_environment $INSTALL_TYPE $VERSION $VENV
+  else
+    sudo apt-get install -y libsqlcipher-dev libzmq-dev
+  fi
 
-      install:
-        - pip install -U pip wheel coveralls "coverage<4.4"
-        - pip install pytest-travis-fold
-        - pip install flake8
-        - pip install -r requirements.txt
+install:
+  - python -m pip install -U pip
 
-      before_script:
-        - flake8 rotkehlchen/
+  - pip install -U pip wheel coveralls "coverage<4.4"
+  - pip install pytest-travis-fold
+  - pip install flake8
+  - pip install -r requirements.txt
 
-      script:
-        - coverage run --source rotkehlchen/ -m pytest --travis-fold=always $TEST_TYPE
+# Run the tests.
+script:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source terryfy/test_tools.sh; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python -m pytest rotkehlchen; fi
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then coverage run --source rotkehlchen/ -m pytest --travis-fold=always $TEST_TYPE; fi
