Package electron app with electron-packager

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,3 +5,6 @@ tag = False
 
 [bumpversion:file:setup.py]
 serialize = {major}.{minor}.{patch}
+
+[bumpversion:file:package.json]
+serialize = {major}.{minor}.{patch}
