--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "datatables.net": "latest",
         "datatables.net-dt": "latest",
         "tail": "latest",
-        "zerorpc": "git+https://github.com/fyears/zerorpc-node.git"
+        "zerorpc": "latest"
     },
     "devDependencies": {
         "electron": "1.8.4",
