--- a/.travis.yml
+++ b/.travis.yml
@@ -58,9 +58,9 @@ script:
   # If we add the specific electron runtime compile in OSX fails with an error
   # that looks like this: https://www.npmjs.com/package/nan#compiling-against-nodejs-012-on-osx
   # - npm install --runtime=electron --target=1.8.4
-  - npm install
-  - PYTHON=/usr/bin/python2.7 ./node_modules/.bin/electron-rebuild
-  - npm test
+  # - npm install
+  # - PYTHON=/usr/bin/python2.7 ./node_modules/.bin/electron-rebuild
+  # - npm test
 
 before_deploy:
   - ./package.sh
