--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "zerorpc": "latest"
     },
     "devDependencies": {
+        "@types/node": "^10.5.2",
         "chai": "^4.1.2",
         "chai-as-promised": "^7.1.1",
         "electron": "1.8.4",
