Switch travis to python 3.7
We need it due to the usage of `from __future__ import annotations`

This issue describes the temporary steps needed in Travis CI for python 3.7: https://github.com/travis-ci/travis-ci/issues/9815

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 os: linux
 language: python
 python:
-  - 3.6
+  - 3.7
 env:
   global:
   - GETH_URL_LINUX='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.8.13-225171a4.tar.gz'
@@ -14,10 +14,12 @@ matrix:
   include:
   - os: osx
     language: generic
-    env: INSTALL_TYPE=macpython VERSION=3.6 VENV=venv
+    env: INSTALL_TYPE=macpython VERSION=3.7 VENV=venv
   - os: linux
     language: python
-    python: '3.6'
+    python: '3.7'
+    dist: xenial
+    sudo: true
 
 cache:
   pip: true
