Adjust the CI for python 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,12 +56,12 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source terryfy/test_tools.sh; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python -m pytest rotkehlchen; fi
   - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then coverage run --source rotkehlchen/ -m pytest --travis-fold=always $TEST_TYPE; fi
-  - npm config set python python2.7
+  # - npm config set python python2.7
   # If we add the specific electron runtime compile in OSX fails with an error
   # that looks like this: https://www.npmjs.com/package/nan#compiling-against-nodejs-012-on-osx
   # - npm install --runtime=electron --target=1.8.4
-  - npm install
-  - PYTHON=/usr/bin/python2.7 ./node_modules/.bin/electron-rebuild
+  - npm install --verbose
+  # - PYTHON=/usr/bin/python2.7 ./node_modules/.bin/electron-rebuild
   - npm test
 
 before_deploy:
