--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "devDependencies": {
         "chai": "^4.1.2",
         "chai-as-promised": "^7.1.1",
+        "dotenv": "^6.0.0",
         "electron": "1.8.4",
+        "electron-context-menu": "^0.10.0",
         "electron-packager": "^8.7.2",
         "electron-rebuild": "^1.5.7",
         "mocha": "^5.1.1",
-        "spectron": "^3.8.0",
-        "electron-context-menu": "^0.10.0"
+        "spectron": "^3.8.0"
     },
     "scripts": {
         "test": "mocha ui/tests/",
