--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
   - os: linux
     language: python
     python: '3.6'
+  - language: 'node_js'
+    node_js: '8.9'
 
 cache:
   pip: true
