--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ before_install:
     fi
 
 install:
+  - pip install --upgrade pip
   - python -m pip install -U pip
   - pip install -U pip wheel coveralls "coverage<4.4"
   - pip install pytest-travis-fold
