--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ os: linux
 language: python
 python:
   - 3.6
+node_js:
+  - 8.9
 env:
   global:
   - GETH_URL_LINUX='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.8.13-225171a4.tar.gz'
@@ -18,8 +20,6 @@ matrix:
   - os: linux
     language: python
     python: '3.6'
-  - language: 'node_js'
-    node_js: '8.9'
 
 cache:
   pip: true
@@ -45,11 +45,6 @@ before_install:
     fi
 
 install:
-  - pip install virtualenv
-  - python -m virtualenv -p python3.6 ./vpy3
-  - source ./vpy3/bin/activate
-  - which python
-  - pip install --upgrade pip
   - python -m pip install -U pip
   - pip install -U pip wheel coveralls "coverage<4.4"
   - pip install pytest-travis-fold
@@ -61,12 +56,12 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source terryfy/test_tools.sh; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python -m pytest rotkehlchen; fi
   - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then coverage run --source rotkehlchen/ -m pytest --travis-fold=always $TEST_TYPE; fi
-  - npm config set python python3.6
+  - npm config set python python2.7
   # If we add the specific electron runtime compile in OSX fails with an error
   # that looks like this: https://www.npmjs.com/package/nan#compiling-against-nodejs-012-on-osx
   # - npm install --runtime=electron --target=1.8.4
   - npm install
-  - PYTHON=/usr/bin/python3.6 ./node_modules/.bin/electron-rebuild
+  - PYTHON=/usr/bin/python2.7 ./node_modules/.bin/electron-rebuild
   - npm test
 
 before_deploy:
