--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ env:
   - GETH_URL_LINUX='https://gethstore.blob.core.windows.net/builds/geth-linux-amd64-1.8.13-225171a4.tar.gz'
   - GETH_URL_MACOS='https://gethstore.blob.core.windows.net/builds/geth-darwin-amd64-1.8.13-225171a4.tar.gz'
   - GETH_VERSION='1.8.13'
+  - USERNAME='test_user'
+  - PASSWORD='super_safe_test_password'
+  - ETH_ADDRESS='0x52bc44d5378309EE2abF1539BF71dE1b7d7bE3b5'
+  - BTC_ADDRESS='3PFo18vaPMSXFTt6zUDGk3UoPjD56QLXjh'
+  - BITTREX_API_KEY='539939bffed348299c6a859ca3f9a41e'
+  - BITTREX_API_SECRET='68203af4221446a08d156bb3a4fd27dc'
 
 
 matrix:
