--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "license": "BSD-3-Clause",
     "main": "main.js",
     "dependencies": {
+        "cryptocurrency-icons": "^0.5.0",
         "datatables.net": "latest",
         "datatables.net-dt": "latest",
         "tail": "latest",
