Add isort to the requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,12 @@
 [flake8]
 max-line-length = 99
 ignore = E731, E402, W504
+
+[isort]
+line_length=99
+known_future_library=future
+multi_line_output=3
+known_first_party=rotkehlchen
+include_trailing_comma=1
+default_section=THIRDPARTY
+combine_as_imports=1
