--- a/package.json
+++ b/package.json
@@ -11,16 +11,30 @@
         "zerorpc": "latest"
     },
     "devDependencies": {
+        "@types/chai": "^4.1.5",
+        "@types/chai-as-promised": "^7.1.0",
+        "@types/datatables.net": "^1.10.13",
+        "@types/jquery": "^3.3.6",
+        "@types/jquery.contextmenu": "^1.7.33",
+        "@types/mocha": "^5.2.5",
+        "@types/node": "^8.9.2",
+        "@types/tail": "^1.2.0",
+        "awesome-typescript-loader": "^5.2.1",
         "chai": "^4.1.2",
         "chai-as-promised": "^7.1.1",
-        "electron": "1.8.4",
+        "electron": "^1.8.4",
         "electron-packager": "^8.7.2",
         "electron-rebuild": "^1.5.7",
-        "mocha": "^5.1.1",
-        "spectron": "^3.8.0"
+        "mocha": "^5.2.0",
+        "source-map-loader": "^0.2.4",
+        "spectron": "^4.0.0",
+        "ts-node": "^7.0.1",
+        "tslint": "^5.11.0",
+        "typescript": "^3.0.3"
     },
     "scripts": {
-        "test": "mocha ui/tests/",
-        "start": "electron ."
+        "test": "tsc && mocha --require ts-node/register ui/tests/**/*.ts",
+        "start": "tsc && electron .",
+        "lint": "tslint -c tslint.json --project tsconfig.json 'ui/**/*.ts'"
     }
 }
