Add version to the rst docs

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,3 +9,5 @@ serialize = {major}.{minor}.{patch}
 [bumpversion:file:package.json]
 serialize = {major}.{minor}.{patch}
 
+[bumpversion:file:docs/conf.py]
+serialize = {major}.{minor}.{patch}
