Fixes a path resolution error on packaged app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist/ui",
+    "outDir": "./ui/dist",
     "allowJs": false,
     "target": "es2016",
     "declaration": true,
