--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
         "@types/mocha": "^5.2.5",
         "@types/node": "^8.9.2",
         "@types/tail": "^1.2.0",
-        "awesome-typescript-loader": "^5.2.1",
         "chai": "^4.1.2",
         "chai-as-promised": "^7.1.1",
         "electron": "^1.8.4",
         "electron-packager": "^8.7.2",
         "electron-rebuild": "^1.5.7",
         "mocha": "^5.2.0",
-        "source-map-loader": "^0.2.4",
+        "rimraf": "^2.6.2",
         "spectron": "^4.0.0",
         "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "typescript": "^3.0.3"
     },
     "scripts": {
-        "test": "tsc && mocha --require ts-node/register ui/tests/**/*.ts",
-        "start": "tsc && electron .",
+        "build": "rimraf ui/dist && tsc",
+        "test": "rimraf ui/dist && tsc && mocha --require ts-node/register ui/tests/**/*.ts",
+        "start": "rimraf ui/dist && tsc && electron .",
         "lint": "tslint -c tslint.json --project tsconfig.json 'ui/**/*.ts'"
     }
 }
