Fixes import whitespace linting

--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
         "spectron": "^4.0.0",
         "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
+        "tslint-eslint-rules": "^5.4.0",
         "typescript": "^3.0.3"
     },
     "scripts": {
         "build": "rimraf ui/dist && tsc",
         "test": "rimraf ui/dist && tsc && mocha --require ts-node/register ui/tests/**/*.ts",
         "start": "rimraf ui/dist && tsc && electron .",
-        "lint": "tslint -c tslint.json -e 'ui/dist/*' --project tsconfig.json 'ui/**/*.ts'"
+        "lint": "tslint -c tslint.json -e 'ui/dist/*' --project tsconfig.json 'ui/**/*.ts'",
+        "lint:fix": "tslint --fix -c tslint.json -e 'ui/dist/*' --project tsconfig.json 'ui/**/*.ts'"
     }
 }
