--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,13 @@
     /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true,
     /* Report errors for fallthrough cases in switch statement. */
-    "typeRoots": [
-      "node_modules/@types"
+    "typeRoots": [],
+    "types": [
+      "datatables.net",
+      "jquery",
+      "jquery.contextmenu",
+      "node",
+      "tail"
     ],
     "baseUrl": ".",
     "paths": {
