--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
 
 install:
   - python -m pip install -U pip
-  - pip install -U pip wheel coveralls "coverage<4.4"
+  - pip install -U pip wheel codecov pytest-cov
   - pip install pytest-travis-fold
   - pip install -r requirements_dev.txt
 
@@ -57,7 +57,7 @@ script:
   - flake8 rotkehlchen/
   - pylint --disable=all --enable=no-value-for-parameter,too-many-format-args,no-member,bad-except-order rotkehlchen
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then python -m pytest rotkehlchen; fi
-  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then coverage run --source rotkehlchen/ -m pytest --travis-fold=always $TEST_TYPE; fi
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then pytest --cov=./ --travis-fold=always rotkehlchen/ $TEST_TYPE; fi
   - npm config set python python2.7
   # If we add the specific electron runtime compile in OSX fails with an error
   # that looks like this: https://www.npmjs.com/package/nan#compiling-against-nodejs-012-on-osx
@@ -67,6 +67,9 @@ script:
   - npm test
   # back to default in case internal travis scripts return non zero response codes.
   - set +e
+
+after_success:
+  - codecov
 
 before_deploy:
   - ./package.sh
