--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,14 +1,8 @@
 -r requirements.txt
+-r requirements_lint.txt
 
 pytest
-mypy==0.641
 bump2version==0.5.8
-pylint
-flake8
-flake8-commas
-flake8-bugbear
-flake8-tuple
-isort
 
 # Documentation
 sphinx
