Use promise-retry in UI tests to fix flakiness
[no ci tests]
[ui tests]

Got the idea of introducting promise-retry to address flakiness of UI
tests in Travis from:
https://hackernoon.com/testing-your-frontend-code-part-iii-e2e-testing-e9261b56475

Specifically:

> So why do we retry this, using the promise-retry module? The reason is very important, and we will see the same thing happening in the rest of the test — when we ask the browser to do something, like navigating to a URL, the browser will do it, but asynchronously. D>

> Unfortunately, if you do not retry in this case, it could still work, because the browser is very fast. But try running it in a CI system like Travis, as I did, and you may get a failure, because CI-s are usually slower than your local system.

> And that is why, in E2E tests on the browser, we need to retry our checks.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "ts-node": "7.0.1",
         "tslint": "5.11.0",
         "tslint-eslint-rules": "5.4.0",
-        "typescript": "3.2.1"
+        "typescript": "3.2.1",
+        "promise-retry": "1.1.1"
     },
     "scripts": {
         "build": "rimraf ui/dist && tsc",
