Upgrade flake8 and pin dev and lint dependencies

--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -1,7 +1,7 @@
 mypy==0.641
-pylint
-flake8
-flake8-commas
-flake8-bugbear
-flake8-tuple
-isort
+pylint==2.2.2
+flake8==3.7.5
+flake8-commas==2.0.0
+flake8-bugbear==18.8.0
+flake8-tuple==0.2.13
+isort==4.3.4
