--- a/.travis.yml
+++ b/.travis.yml
@@ -79,9 +79,7 @@ jobs:
       install: pip install -r requirements_lint.txt
       script:
         - git rev-parse HEAD
-        - flake8 rotkehlchen/
-        - mypy rotkehlchen/ --ignore-missing-imports
-        - pylint --rcfile .pylint.rc rotkehlchen/
+        - make lint
 
     - stage: test
       <<: *job-template-linux
