Moves capture before the app.stop()
[ui tests]

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 TS_NODE_PROJECT='tsconfig.spec.json'
+TZ=UTC
 ROTKEHLCHEN_ENVIRONMENT=test
 PASSWORD=1234
 ETH_ADDRESS=0x52bc44d5378309EE2abF1539BF71dE1b7d7bE3b5
