--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -18,11 +18,14 @@
     "datatables.net": "1.10.19",
     "datatables.net-dt": "1.10.19",
     "eslint-config-prettier": "4.2.0",
+    "font-awesome": "^4.7.0",
     "register-service-worker": "latest",
+    "roboto-fontface": "*",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "vue-property-decorator": "8.1.1",
     "vue-router": "3.0.6",
+    "vuetify": "^1.5.5",
     "vuex": "3.1.1",
     "zerorpc-rotkehlchen": "0.1.0",
     "tasklist": "4.0.0"
@@ -66,14 +69,16 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "spectron": "5.0.0",
-    "stylus": "0.54.5",
+    "stylus": "^0.54.5",
     "stylus-loader": "3.0.2",
     "ts-jest": "24.0.2",
     "ts-node": "7.0.1",
     "typescript": "3.4.5",
     "vue-cli-plugin-electron-builder": "1.3.2",
+    "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-svg-loader": "^0.12.0",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.10",
+    "vuetify-loader": "^1.0.5"
   },
   "license": "BSD-3-Clause",
   "main": "background.js"
