Rewrites the Dashboard

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -19,6 +19,7 @@
     "datatables.net-dt": "1.10.19",
     "eslint-config-prettier": "4.2.0",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.11",
     "register-service-worker": "latest",
     "roboto-fontface": "*",
     "vue": "2.6.10",
@@ -37,6 +38,7 @@
     "@types/jest": "24.0.12",
     "@types/jquery": "3.3.29",
     "@types/jquery.contextmenu": "1.7.34",
+    "@types/lodash": "^4.14.132",
     "@types/mocha": "5.2.5",
     "@types/node": "8.10.38",
     "@types/webdriverio": "4.10.4",
