--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -17,16 +17,16 @@
     "cryptocurrency-icons": "0.16.0",
     "datatables.net": "1.10.19",
     "datatables.net-dt": "1.10.19",
-    "eslint-config-prettier": "4.2.0",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.17.11",
+    "eslint-config-prettier": "4.3.0",
+    "font-awesome": "4.7.0",
+    "lodash": "4.17.11",
     "register-service-worker": "latest",
     "roboto-fontface": "*",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "vue-property-decorator": "8.1.1",
     "vue-router": "3.0.6",
-    "vuetify": "^1.5.5",
+    "vuetify": "1.5.14",
     "vuex": "3.1.1",
     "zerorpc-rotkehlchen": "0.1.0",
     "tasklist": "4.0.0"
@@ -40,20 +40,20 @@
     "@types/jquery.contextmenu": "1.7.34",
     "@types/lodash": "^4.14.132",
     "@types/mocha": "5.2.5",
-    "@types/node": "8.10.38",
+    "@types/node": "10.14.0",
     "@types/webdriverio": "4.10.4",
-    "@vue/cli-plugin-babel": "3.7.0",
-    "@vue/cli-plugin-eslint": "3.7.0",
-    "@vue/cli-plugin-pwa": "3.7.0",
-    "@vue/cli-plugin-typescript": "^3.7.0",
-    "@vue/cli-plugin-unit-jest": "3.7.0",
-    "@vue/cli-service": "3.7.0",
+    "@vue/cli-plugin-babel": "3.8.0",
+    "@vue/cli-plugin-eslint": "3.8.0",
+    "@vue/cli-plugin-pwa": "3.8.0",
+    "@vue/cli-plugin-typescript": "3.8.1",
+    "@vue/cli-plugin-unit-jest": "3.8.0",
+    "@vue/cli-service": "3.8.0",
     "@vue/eslint-config-prettier": "4.0.1",
-    "@vue/eslint-config-typescript": "^4.0.0",
+    "@vue/eslint-config-typescript": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "24.8.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "dotenv": "8.0.0",
@@ -62,7 +62,7 @@
     "electron-rebuild": "1.8.4",
     "eslint": "5.16.0",
     "eslint-plugin-vue": "5.2.2",
-    "jest": "^24.8.0",
+    "jest": "24.8.0",
     "mocha": "6.1.4",
     "node-loader": "0.6.0",
     "node-sass": "4.12.0",
@@ -76,11 +76,11 @@
     "ts-jest": "24.0.2",
     "ts-node": "7.0.1",
     "typescript": "3.4.5",
-    "vue-cli-plugin-electron-builder": "1.3.2",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-svg-loader": "^0.12.0",
+    "vue-cli-plugin-electron-builder": "1.3.4",
+    "vue-cli-plugin-vuetify": "0.5.0",
+    "vue-svg-loader": "0.12.0",
     "vue-template-compiler": "2.6.10",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "1.2.2"
   },
   "license": "BSD-3-Clause",
   "main": "background.js"
