--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -17,14 +17,14 @@
     "cryptocurrency-icons": "0.16.0",
     "datatables.net": "1.10.19",
     "datatables.net-dt": "1.10.19",
-    "eslint-config-prettier": "4.3.0",
+    "eslint-config-prettier": "5.0.0",
     "font-awesome": "4.7.0",
     "lodash": "4.17.11",
     "register-service-worker": "latest",
     "roboto-fontface": "*",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
-    "vue-property-decorator": "8.1.1",
+    "vue-property-decorator": "8.2.1",
     "vue-router": "3.0.6",
     "vuetify": "1.5.14",
     "vuex": "3.1.1",
@@ -47,12 +47,12 @@
     "@vue/cli-plugin-pwa": "3.8.0",
     "@vue/cli-plugin-typescript": "3.8.1",
     "@vue/cli-plugin-unit-jest": "3.8.0",
-    "@vue/cli-service": "3.8.0",
+    "@vue/cli-service": "3.8.4",
     "@vue/eslint-config-prettier": "4.0.1",
     "@vue/eslint-config-typescript": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
@@ -66,7 +66,7 @@
     "mocha": "6.1.4",
     "node-loader": "0.6.0",
     "node-sass": "4.12.0",
-    "prettier": "^1.17.0",
+    "prettier": "1.18.2",
     "promise-retry": "1.1.1",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
