Finalizes exchange management, starts Fiat implementation

--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -30,9 +30,9 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "src/**/*.vue"
+//    "tests/**/*.ts",
+//    "tests/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
