--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -58,7 +58,6 @@
     "chai-as-promised": "7.1.1",
     "dotenv": "8.0.0",
     "electron": "3.0.12",
-    "electron-packager": "13.0.1",
     "electron-rebuild": "1.8.4",
     "eslint": "5.16.0",
     "eslint-plugin-vue": "5.2.2",
@@ -76,7 +75,7 @@
     "ts-jest": "24.0.2",
     "ts-node": "7.0.1",
     "typescript": "3.4.5",
-    "vue-cli-plugin-electron-builder": "1.3.4",
+    "vue-cli-plugin-electron-builder": "^1.3.4",
     "vue-cli-plugin-vuetify": "0.5.0",
     "vue-svg-loader": "0.12.0",
     "vue-template-compiler": "2.6.10",
