--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "cryptocurrency-icons": "0.9.3",
         "datatables.net": "1.10.19",
         "datatables.net-dt": "1.10.19",
-        "zerorpc-rotkehlchen": "0.1.0"
+        "zerorpc-rotkehlchen": "0.1.0",
+        "tasklist": "4.0.0"
     },
     "devDependencies": {
         "@types/chai": "4.1.7",
