--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,11 +5,4 @@ pytest==4.1.1
 bump2version==0.5.8
 pytest-cov==2.7.1
 
-# Documentation
-
-# This is the last release supported by releases. When
-# releases supports higher sphinx versions switch to them
-sphinx==1.7.8
-sphinx-autobuild==0.7.1
-sphinx_rtd_theme==0.4.3
-releases==1.6.1
+-r requirements_docs.txt
