--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -1,7 +1,10 @@
 mypy==0.720
+mypy-extensions==0.4.1
 pylint==2.3.1
 flake8==3.7.7
 flake8-commas==2.0.0
 flake8-bugbear==19.3.0
 flake8-tuple==0.4.0
 isort==4.3.4
+# Required for the ethereum related typing
+eth-utils==1.6.2
