Add package-lock.json to .bumpversion.cfg and fix version there

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,6 +9,9 @@ serialize = {major}.{minor}.{patch}
 [bumpversion:file:package.json]
 serialize = {major}.{minor}.{patch}
 
+[bumpversion:file:package-lock.json]
+serialize = {major}.{minor}.{patch}
+
 [bumpversion:file:docs/conf.py]
 serialize = {major}.{minor}.{patch}
 
