--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -14,40 +14,36 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "bignumber.js": "^9.0.0",
-    "cryptocurrency-icons": "0.16.0",
+    "bignumber.js": "9.0.0",
+    "cryptocurrency-icons": "0.15.0",
     "font-awesome": "4.7.0",
-    "lodash": "4.17.11",
+    "lodash": "4.17.15",
     "register-service-worker": "latest",
     "roboto-fontface": "*",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "vue-property-decorator": "8.2.1",
-    "vue-router": "3.0.6",
-    "vuetify": "1.5.16",
+    "vue-router": "3.0.7",
+    "vuetify": "2.0.4",
     "vuex": "3.1.1",
     "zerorpc-rotkehlchen": "0.1.0",
     "tasklist": "4.0.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "6.0.0",
     "@types/chai": "4.1.7",
     "@types/chai-as-promised": "7.1.0",
-    "@types/datatables.net": "1.10.13",
-    "@types/jest": "24.0.12",
-    "@types/jquery": "3.3.29",
-    "@types/jquery.contextmenu": "1.7.34",
-    "@types/lodash": "^4.14.132",
-    "@types/mocha": "5.2.5",
-    "@types/node": "10.14.0",
+    "@types/jest": "24.0.15",
+    "@types/lodash": "4.14.136",
+    "@types/mocha": "5.2.7",
+    "@types/node": "12.6.8",
     "@types/webdriverio": "4.10.4",
-    "@vue/cli-plugin-babel": "3.8.0",
-    "@vue/cli-plugin-eslint": "3.8.0",
-    "@vue/cli-plugin-pwa": "3.8.0",
-    "@vue/cli-plugin-typescript": "3.8.1",
-    "@vue/cli-plugin-unit-jest": "3.8.0",
-    "@vue/cli-service": "3.8.4",
-    "@vue/eslint-config-prettier": "4.0.1",
+    "@vue/cli-plugin-babel": "3.10.0",
+    "@vue/cli-plugin-eslint": "3.10.0",
+    "@vue/cli-plugin-pwa": "3.10.0",
+    "@vue/cli-plugin-typescript": "3.10.0",
+    "@vue/cli-plugin-unit-jest": "3.10.0",
+    "@vue/cli-service": "3.10.0",
+    "@vue/eslint-config-prettier": "5.0.0",
     "@vue/eslint-config-typescript": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
@@ -58,27 +54,29 @@
     "dotenv": "8.0.0",
     "electron": "3.0.12",
     "electron-rebuild": "1.8.5",
-    "eslint": "6.0.1",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-vue": "5.2.3",
+    "eslint-plugin-vuetify": "^1.0.0-beta.3",
     "jest": "24.8.0",
-    "mocha": "6.1.4",
+    "mocha": "6.2.0",
     "node-loader": "0.6.0",
-    "node-sass": "4.12.0",
     "prettier": "1.18.2",
     "promise-retry": "1.1.1",
-    "rimraf": "2.6.2",
+    "rimraf": "2.6.3",
+    "sass": "^1.22.9",
     "sass-loader": "7.1.0",
     "spectron": "5.0.0",
-    "stylus": "^0.54.5",
+    "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "ts-jest": "24.0.2",
-    "ts-node": "7.0.1",
-    "typescript": "3.5.2",
-    "vue-cli-plugin-electron-builder": "^1.3.5",
-    "vue-cli-plugin-vuetify": "0.5.0",
-    "vue-svg-loader": "0.12.0",
+    "ts-node": "8.3.0",
+    "typescript": "3.4.5",
+    "vue-cli-plugin-electron-builder": "1.4.0",
+    "vue-cli-plugin-vuetify": "0.6.1",
     "vue-template-compiler": "2.6.10",
-    "vuetify-loader": "1.2.2"
+    "vuetify-loader": "1.3.0"
   },
   "license": "BSD-3-Clause",
   "main": "background.js"
