--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -5,6 +5,7 @@ flake8==3.7.8
 flake8-commas==2.0.0
 flake8-bugbear==19.3.0
 flake8-tuple==0.4.0
+pep8-naming==0.8.2
 isort==4.3.4
 # Required for the ethereum related typing
 eth-utils==1.6.2
