--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -15,64 +15,58 @@
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
-    "cryptocurrency-icons": "0.15.0",
+    "cryptocurrency-icons": "0.16.0",
     "font-awesome": "4.7.0",
     "lodash": "4.17.15",
     "register-service-worker": "latest",
     "roboto-fontface": "*",
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
-    "vue-property-decorator": "8.2.1",
-    "vue-router": "3.0.7",
-    "vuetify": "2.0.4",
+    "vue-property-decorator": "8.2.2",
+    "vue-router": "3.1.2",
+    "vuetify": "2.0.11",
     "vuex": "3.1.1",
     "zerorpc-rotkehlchen": "0.1.0",
     "tasklist": "4.0.0"
   },
   "devDependencies": {
-    "@types/chai": "4.1.7",
-    "@types/chai-as-promised": "7.1.0",
     "@types/jest": "24.0.15",
     "@types/lodash": "4.14.136",
-    "@types/mocha": "5.2.7",
     "@types/node": "12.6.8",
     "@types/webdriverio": "4.10.4",
-    "@vue/cli-plugin-babel": "3.10.0",
-    "@vue/cli-plugin-eslint": "3.10.0",
-    "@vue/cli-plugin-pwa": "3.10.0",
-    "@vue/cli-plugin-typescript": "3.10.0",
-    "@vue/cli-plugin-unit-jest": "3.10.0",
-    "@vue/cli-service": "3.10.0",
+    "@vue/cli-plugin-babel": "3.11.0",
+    "@vue/cli-plugin-eslint": "3.11.0",
+    "@vue/cli-plugin-pwa": "3.11.0",
+    "@vue/cli-plugin-typescript": "3.11.0",
+    "@vue/cli-plugin-unit-jest": "3.11.0",
+    "@vue/cli-service": "3.11.0",
     "@vue/eslint-config-prettier": "5.0.0",
     "@vue/eslint-config-typescript": "4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.2",
+    "babel-eslint": "10.0.3",
     "babel-jest": "24.8.0",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "dotenv": "8.0.0",
+    "dotenv": "8.1.0",
     "electron": "3.0.12",
     "electron-rebuild": "1.8.5",
     "eslint": "5.16.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint-config-prettier": "6.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-vue": "5.2.3",
-    "eslint-plugin-vuetify": "^1.0.0-beta.3",
+    "eslint-plugin-vuetify": "^1.0.0-beta.4",
     "jest": "24.8.0",
-    "mocha": "6.2.0",
     "node-loader": "0.6.0",
     "prettier": "1.18.2",
     "promise-retry": "1.1.1",
-    "rimraf": "2.6.3",
-    "sass": "^1.22.9",
-    "sass-loader": "7.1.0",
+    "rimraf": "3.0.0",
+    "sass": "1.22.10",
+    "sass-loader": "7.3.1",
     "spectron": "5.0.0",
     "ts-jest": "24.0.2",
     "ts-node": "8.3.0",
     "typescript": "3.4.5",
     "vue-cli-plugin-electron-builder": "1.4.0",
-    "vue-cli-plugin-vuetify": "0.6.1",
+    "vue-cli-plugin-vuetify": "0.6.3",
     "vue-template-compiler": "2.6.10",
     "vuetify-loader": "1.3.0"
   },
