--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
         "chai-as-promised": "7.1.1",
         "dotenv": "6.1.0",
         "electron": "3.0.12",
+        "electron-installer-dmg": "^3.0.0",
         "electron-packager": "13.0.1",
         "electron-rebuild": "1.8.2",
+        "lodash": ">=4.17.13",
         "mocha": "6.1.4",
+        "promise-retry": "1.1.1",
         "rimraf": "2.6.2",
         "spectron": "5.0.0",
         "ts-node": "7.0.1",
         "tslint": "5.11.0",
         "tslint-eslint-rules": "5.4.0",
-        "typescript": "3.2.1",
-        "promise-retry": "1.1.1",
-        "lodash": ">=4.17.13"
+        "typescript": "3.2.1"
     },
     "scripts": {
         "build": "rimraf ui/dist && tsc",
