--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -4,3 +4,5 @@ sphinx==1.7.8
 sphinx-autobuild==0.7.1
 sphinx_rtd_theme==0.4.3
 releases==1.6.1
+# Needed by releases, but releases can't handle >= 2.8.0
+semantic-version==2.6.0
