--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,9 +9,9 @@ serialize = {major}.{minor}.{patch}
 [bumpversion:file:package.json]
 serialize = {major}.{minor}.{patch}
 
-[bumpversion:file:package-lock.json]
+[bumpversion:file:docs/conf.py]
 serialize = {major}.{minor}.{patch}
 
-[bumpversion:file:docs/conf.py]
+[bumpversion:file:ui/index.html]
 serialize = {major}.{minor}.{patch}
 
