--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
 
 build_script:
     - ls  # Remove me. I am just here so that build script has content
-    # - npm install
+    # - npm ci
     # - npm config set python C:\Python27\python.exe
     # - set PYTHON="C:\Python27\python.exe"
     # - npm rebuild zeromq --runtime=electron --target=3.0.0
